BAH-4244|Fix. requiredFields visibilty on UI front based on config

--- a/apps/registration/src/pages/createPatientPage/styles/index.module.scss
+++ b/apps/registration/src/pages/createPatientPage/styles/index.module.scss
@@ -229,3 +229,8 @@
   color: #525252;
   margin-top: $spacing-01;
 }
+
+.requiredAsterisk {
+  color: #da1e28;
+  margin-left: $spacing-01;
+}
